--- a/src/app/components/obsidian/obsidian.html
+++ b/src/app/components/obsidian/obsidian.html
@@ -28,7 +28,7 @@
         },
         attachments: [
           { name: 'migration-roadmap.pdf', url: '/assets/docs/map.pdf' },
-          { name: 'github-repo', url: 'https://github.com/user/project' },
+          { name: 'github-repo', url: 'https://github.com/user/project/sadfasdf/asdfas/dfsadf/sadf' },
           { name: 'live-demo', url: 'https://demo.example.com' }
         ]
       }">
