--- a/src/app/styles/colors.less
+++ b/src/app/styles/colors.less
@@ -16,7 +16,7 @@
 @dark-text-3: #666666;
 
 @light-bg-1: #f5f5f5;
-@light-bg-2: #efefef;
+@light-bg-2: #ffffff;
 @light-bg-3: #e5e5e5;
  
 @light-text-1: #1a1a1a;
