feat: add attachments repository
now attachments are filled from external api
refine activity css-styles & fix obsidian layout for overflowing content

--- a/src/app/components/activity-info/activity-info.html
+++ b/src/app/components/activity-info/activity-info.html
@@ -47,7 +47,7 @@
     @if (activity.attachments.length) {
       <div class="attachment-zone">
         <button class="ls-cmd" [class.active]="showAttachments" (click)="toggleAttachments()">
-          <span class="icon">📁</span> ls -la ./resources/
+          <span class="icon">📁</span> ls -la ./attachments/
         </button>
 
         @if (showAttachments) {
