--- a/src/app/components/obsidian/obsidian.html
+++ b/src/app/components/obsidian/obsidian.html
@@ -1,5 +1,5 @@
 <div class="profile-grid">
-  <div class="left-column">
+  <div class="column">
     <section class="section">
       <h2 class="section-title"># projects</h2>
       <div class="activity-list">
@@ -19,7 +19,7 @@
     </section>
   </div>
   
-  <div class="right-column">
+  <div class="column">
     <section class="section">
       <h2 class="section-title"># hard-skills</h2>
       <app-expand-content maxHeight="225px">
